# weave

./: .bumpversion.toml  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yml  docker-compose.with-traefik.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: create-release.yml  docker-images.yml  publish-agent.yml
agent/: README.md  install.sh  pyproject.toml  sdwan-agent.service  weave.service
agent/agent/: config.py  controller.py  frr.py  main.py  state.py  wireguard.py
controller/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
controller/alembic/versions/: 0001_initial.py  0002_add_offline_status.py  0003_add_preauth_tokens.py  0004_add_site_subnet.py  0005_hash_preauth_tokens.py  0006_cleanup_legacy_preauth_token_column.py  0007_claims_and_hashed_node_tokens.py  0008_add_unique_vpn_ip.py  0009_add_sites_and_transport_links.py  0010_transport_overlay_addresses_and_keys.py  0011_add_destination_policies.py  0012_scope_destination_policies.py  0013_add_site_events.py
controller/app/: main.py
controller/app/core/: agent_ws.py  config.py  security.py  websocket.py
controller/app/db/: base.py  models.py
controller/app/routers/: agent_ws.py  auth.py  auth_web.py  bgp.py  events.py  nodes.py  policies.py  ws.py
controller/app/schemas/: auth.py  node.py
controller/app/services/: auth_service.py  event_service.py  frr_service.py  node_service.py  peer_service.py  policy_resolver.py  policy_service.py  wireguard_service.py
controller/tests/: conftest.py  test_auth.py  test_auth_web.py  test_config.py  test_expiry.py  test_nodes.py  test_peers.py  test_policies.py  test_sites.py
frontend/: app.js  index.html  package-lock.json  package.json  style.css  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ConfirmModal.jsx  CreateClaimModal.jsx  EditSubnetModal.jsx  Header.jsx  RevealClaimModal.jsx  Sidebar.jsx  SiteDetailDrawer.jsx  StatusPill.jsx
frontend/src/contexts/: AuthContext.jsx  ConfirmContext.jsx  DataContext.jsx  ToastContext.jsx
frontend/src/lib/: api.js  utils.js
frontend/src/views/: BgpView.jsx  ClaimsView.jsx  LoginView.jsx  NodesView.jsx  PoliciesView.jsx  RoutingView.jsx  SitesView.jsx  TransportsView.jsx
sdwan-agent/: install.sh  pyproject.toml
sdwan-agent/agent/: config.py  controller.py  main.py
sdwan-controller/: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
sdwan-controller/alembic/: env.py
sdwan-controller/app/: main.py
sdwan-controller/app/core/: config.py
sdwan-controller/app/db/: models.py
sdwan-controller/app/routers/: auth.py  nodes.py  peers.py
sdwan-controller/app/schemas/: auth.py  node.py
sdwan-controller/app/services/: node_service.py  peer_service.py
sdwan-controller/app/static/: app.js  index.html  style.css
sdwan-controller/tests/: conftest.py  test_auth.py  test_nodes.py  test_peers.py
