[project]
name = "weave-repo-tools"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "bump-my-version>=1.1.4",
]

[tool.uv]
package = false

[tool.bumpversion]
current_version = "0.2.0"
parse = '(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)'
serialize = ["{major}.{minor}.{patch}"]
search = "{current_version}"
replace = "{new_version}"
regex = false
ignore_missing_version = false
tag = true
sign_tags = false
tag_name = "v{new_version}"
tag_message = "Release v{new_version}"
commit = true
message = "Bump version: {current_version} -> {new_version}"
allow_dirty = false

[[tool.bumpversion.files]]
filename = "agent/pyproject.toml"

[[tool.bumpversion.files]]
filename = "controller/pyproject.toml"

[[tool.bumpversion.files]]
filename = "controller/app/main.py"

[[tool.bumpversion.files]]
filename = "agent/install.sh"

[[tool.bumpversion.files]]
filename = "README.md"

[[tool.bumpversion.files]]
filename = ".env.example"
search = "WEAVE_VERSION=v{current_version}"
replace = "WEAVE_VERSION=v{new_version}"

[[tool.bumpversion.files]]
filename = "docker-compose.yml"
search = "ghcr.io/danohn/weave-frontend:${{WEAVE_VERSION:-v{current_version}}}"
replace = "ghcr.io/danohn/weave-frontend:${{WEAVE_VERSION:-v{new_version}}}"

[[tool.bumpversion.files]]
filename = "docker-compose.yml"
search = "ghcr.io/danohn/weave-controller:${{WEAVE_VERSION:-v{current_version}}}"
replace = "ghcr.io/danohn/weave-controller:${{WEAVE_VERSION:-v{new_version}}}"

[[tool.bumpversion.files]]
filename = "docker-compose.with-traefik.yml"
search = "ghcr.io/danohn/weave-frontend:${{WEAVE_VERSION:-v{current_version}}}"
replace = "ghcr.io/danohn/weave-frontend:${{WEAVE_VERSION:-v{new_version}}}"

[[tool.bumpversion.files]]
filename = "docker-compose.with-traefik.yml"
search = "ghcr.io/danohn/weave-controller:${{WEAVE_VERSION:-v{current_version}}}"
replace = "ghcr.io/danohn/weave-controller:${{WEAVE_VERSION:-v{new_version}}}"
