[project]
name = "weave"
version = "0.1.0"
description = "Weave edge node agent"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
weave = "agent.main:main"

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
