[project]
name = "sdwan-agent"
version = "0.1.0"
description = "SD-WAN edge node agent"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
sdwan-agent = "agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
